# teste

./: cabeca.css  index.html  main.js  styles.css
api_teste/: pyproject.toml  saida.json
api_teste/api_teste/: app.py
test1.0/: index.html  min.js  styles.css
teste/: index.html  main.js  style.css
teste_tabela_api/: index.html  style.css
