[tool.poetry]
name = "api-teste"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
